Chg: Small update to the GUI.

--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
+                <div class="panel-off panel-default-off">
+                    <div class="panel-heading" style="display: none">
                         <h3 class="panel-title">Timer</h3>
                     </div>
-                    <div class="panel-body">
-                        <div class="well well-sm">Scramble: ...</div>
-                        <div class="timer">00:00.00</div>
+                    <div class="panel-body-off">
+                        <div class="well well-sm">Scramble: B2  U  D2  R'  U2  B2  R2  D'  R2  F'  U2  L'  B'  U'  R2  B'  R2  L  F2  U2  L2  D'  R  F2  R2</div>
+                        <div class="center-block timer">00:00.00</div>
+                        <p class="alert alert-info">To start/stop the timer press <span class="label label-default">space bar</span>.</p>
                     </div>
                 </div>
             </div>
@@ -67,7 +68,7 @@
                 <li><a href="https://github.com/resamsel/cube-timer">GitHub</a></li>
             </ul>
             <p>Designed and built by @resamsel.</p>
-            <p>Code licensed <a rel="license" href="https://github.com/resamsel/cube-timer/blob/master/LICENSE" target="_blank">MIT</a>, docs <a rel="license" href="https://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.</p>
+            <p>Code licensed <a rel="license" href="https://github.com/resamsel/cube-timer/blob/master/LICENSE" target="_blank">GPLv2</a>.</p>
         </div>
     </footer>
 </body>
