Chg: Adds a max height to the times container.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="timer.css">
 </head>
 <body><!-- class="started/stopped" -->
-    <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+    <header class="navbar navbar-static-top nav" id="top" role="banner">
         <div class="container">
             <div class="navbar-header">
                 <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false">
@@ -45,7 +45,7 @@
                             Scramble:
                             <span id="scramble"></span>
                         </div>
-                        <div id="timer" class="center-block timer">00:00.00</div>
+                        <div id="timer">00:00.00</div>
                         <div>
                             <button class="start-stop btn btn-primary btn-lg btn-block">
                                 <span class="start">
@@ -75,9 +75,9 @@
             </div>
         </div>
     </div>
-    <footer class="bs-docs-footer" role="contentinfo">
+    <footer class="footer" role="contentinfo">
         <div class="container">
-            <ul class="bs-docs-footer-links">
+            <ul class="footer-links">
                 <li><a href="https://github.com/resamsel/cube-timer">GitHub</a></li>
             </ul>
             <p>Designed and built by @resamsel.</p>
