New: Adds sub X labels to the list of times. Reorganises times into a table.

--- a/index.html
+++ b/index.html
@@ -73,8 +73,22 @@
                         <h3 class="panel-title">Times</h3>
                     </div>
                     <div class="panel-body">
-                        <ol id="times" reversed="reversed">
-                        </ol>
+                        <table id="times" class="table table-condensed  table-hover">
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Configuration</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="checkbox">
+                            <label>
+                                <input id="subtext" type="checkbox" /> Show <i>sub-X</i> labels
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -106,6 +120,7 @@
 
     <script src="javascript/jquery.stopwatch.js"></script>
     <script src="javascript/rubiks-cube-scrambler.js"></script>
+    <script src="javascript/jintervals.js"></script>
     <script src="javascript/timer.js"></script>
 </body>
 </html>
