Chg: Hides hint on mobile devices.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 </span>
                             </button>
                         </div>
-                        <p class="alert alert-info">Hint: To start/stop the timer press <span class="label label-default">space bar</span>.</p>
+                        <p id="hint" class="alert alert-info">Hint: To start/stop the timer press <span class="label label-default">space bar</span>.</p>
                     </div>
                 </div>
             </div>
