--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
             <div class="navbar-header">
                 <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
                 </button>
                 <a href="#" class="navbar-brand">Cube Timer</a>
             </div>
@@ -41,6 +38,16 @@
                 <ul class="nav navbar-nav">
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown" style="display: none">
+                        <a href="#" data-target="#" class="dropdown-toggle" data-toggle="dropdown">
+                            3x3x3
+                            <b class="caret"></b>
+                            <div class="ripple-container"></div>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="javascript:void(0)">3x3x3</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -79,7 +86,7 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <div class="btn-group pull-right" role="group">
+                        <div class="btn-group btn-group-raised pull-right" role="group">
                             <button id="export" type="button" class="btn btn-default btn-xs" title="Export">
                                 <span class="glyphicon glyphicon-export"></span>
                             </button>
@@ -104,15 +111,15 @@
                     </div>
                     <div class="panel-body">
                         <form id="config" class="form-horizontal">
-                            <div class="form-group" style="display:none"><!-- disabled until implemented -->
+                            <div class="form-group">
                                 <label for="inspectionTime" class="col-form-4 control-label">Inspection time</label>
                                 <div class="col-form-8">
                                     <select id="inspectionTime" class="form-control">
                                         <option value="0">None</option>
-                                        <!--<option value="3">3 seconds</option>-->
-                                        <!--<option value="5">5 seconds</option>-->
-                                        <!--<option value="10">10 seconds</option>-->
-                                        <!--<option value="15">15 seconds</option>-->
+                                        <option value="3">3 seconds</option>
+                                        <option value="5">5 seconds</option>
+                                        <option value="10">10 seconds</option>
+                                        <option value="15">15 seconds</option>
                                     </select>
                                 </div>
                                 <div class="col-form-offset-4 col-form-8">
@@ -125,8 +132,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group-off"><!-- disabled until above configuration is implemented -->
-                                <div class-off="col-form-offset-4 col-form-8">
+                            <div class="form-group">
+                                <div class="col-form-offset-4 col-form-8">
                                     <div class="checkbox">
                                         <label>
                                             <input id="subtext" type="checkbox" />
