Chg: Uses a template instead of using code for creating rows in the times panel. #refactoring

--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
                     <div class="panel-body">
                         <div id="times" class="table-responsive">
                             <table class="table table-condensed  table-hover">
+                                <tfoot style="display: none">
+                                    <tr id="template">
+                                        <td class="index text-right"></td>
+                                        <td class="value"></td>
+                                        <td class="date"></td>
+                                        <td class="tags"></td>
+                                        <td class="actions">
+                                            <button class="btn btn-default btn-xs btn-remove">
+                                                <span class="glyphicon glyphicon-minus"></span>
+                                            </button>
+                                        </td>
+                                    </tr>
+                                </tfoot>
                                 <tbody>
                                 </tbody>
                             </table>
