New: Adds icon to configuration link. #minor

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <div class="navbar-header">
                 <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a href="#" class="navbar-brand">Cube Timer</a>
             </div>
@@ -49,7 +52,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a id="config-button" href="javascript:void(0)">Configuration</a>
+                        <a id="config-button" href="javascript:void(0)">
+                            <span class="glyphicon glyphicon-cog"></span>
+                            Configuration
+                        </a>
                     </li>
                 </ul>
             </nav>
