New: Adds Google OAuth 2.0 auth and reads Drive files with name Cube Times.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                         </ul>
                     </li>
                     <li>
+                        <a id="google-login" href="javascript:void(0)">
+                            Login with Google
+                        </a>
+                    </li>
+                    <li>
                         <a id="config-button" href="javascript:void(0)">
                             <span class="glyphicon glyphicon-cog"></span>
                             Configuration
@@ -244,6 +249,16 @@
     <script src="js/rubiks-cube-scrambler.js"></script>
     <script src="js/jintervals.js"></script>
     <script src="js/jquery.dateFormat.min.js"></script>
+    <script src="js/google.js"></script>
     <script src="js/timer.js"></script>
+
+
+    <script src="http://code.jquery.com/jquery-migrate-1.1.0.js"></script>
+    <!--Register Google Api-->
+    <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+
+
+
+
 </body>
 </html>
