Chg: Some refactoring. Google file export of document with name Cube Timer. Currently not yet using that data.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a id="google-login" style="visibility: hidden" href="javascript:void(0)">
+                        <a id="google-login" style="display: none" href="javascript:void(0)">
                             Login with Google
                         </a>
                     </li>
