--- a/index.html
+++ b/index.html
@@ -224,17 +224,26 @@
                   <h4 class="modal-title">Import Times</h4>
                 </div>
                 <div class="modal-body">
-                    <button id="import-from-file" type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-open"></span>
-                        Load from local file
-                    </button>
+                    <div class="btn-group" role="group">
+                        <button id="import-from-file" type="button" class="btn btn-default">
+                            <span class="glyphicon glyphicon-open"></span>
+                            Load from local file
+                        </button>
 
-                    <button id="import-from-drive" type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-open"></span>
-                        Load from Google Drive
-                    </button>
+                        <button id="import-from-drive" type="button" class="btn btn-default">
+                            <span class="glyphicon glyphicon-open"></span>
+                            Load from Google Drive
+                        </button>
+                    </div>
 
-                    <textarea id="import-content" class="form-control" rows="12"></textarea>
+                    <div id="import-error" class="alert alert-dismissible alert-danger">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        <span class="content"></span>
+                    </div>
+
+                    <div class="content">
+                        <textarea id="import-content" class="form-control" rows="12"></textarea>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">
