--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,11 @@
     <!-- Mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>Rubik's Cube Timer</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+
     <!-- Material Design fonts -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Latest compiled and minified CSS -->
@@ -20,7 +23,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.7/css/ripples.min.css" rel="stylesheet">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/timer.css">
@@ -278,7 +281,7 @@
     <script src="js/timer.js"></script>
 
 
-    <script src="http://code.jquery.com/jquery-migrate-1.1.0.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.1.0.js"></script>
     <!--Register Google Api-->
     <script src="https://apis.google.com/js/api.js"></script>
 
