New: Migration to Grunt task runner, which simplifies development and deployment significantly. Also, there's no need for an internet connection any longer to use the cube timer (all resources locally available).

--- a/src/index.html
+++ b/src/index.html
@@ -7,24 +7,15 @@
     <title>Rubik's Cube Timer</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
-    <!-- Material Design fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-    <!-- Optional theme
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-    -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Bootstrap Material Design -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.7/css/bootstrap-material-design.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.7/css/ripples.min.css" rel="stylesheet">
+    <link href="css/bootstrap-material-design.min.css" rel="stylesheet">
+    <link href="css/ripples.min.css" rel="stylesheet">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="js/jquery.min.js"></script>
 
     <link rel="stylesheet" href="css/timer.css">
 </head>
@@ -273,20 +264,10 @@
         <input id="import-file" type="file">
     </div>
 
-    <script src="js/jquery.stopwatch.js"></script>
-    <script src="js/rubiks-cube-scrambler.js"></script>
-    <script src="js/jintervals.js"></script>
-    <script src="js/jquery.dateFormat.min.js"></script>
-    <script src="js/google.js"></script>
-    <script src="js/timer.js"></script>
+    <script src="js/cube-timer.min.js"></script>
 
-
-    <script src="https://code.jquery.com/jquery-migrate-1.1.0.js"></script>
     <!--Register Google Api-->
-    <script src="https://apis.google.com/js/api.js"></script>
-
-
-
+    <script src="js/google-api.js"></script>
 
 </body>
 </html>
