New: Makes a Chrome app.

--- a/src/index.html
+++ b/src/index.html
@@ -42,16 +42,16 @@
                             <div class="ripple-container"></div>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="javascript:void(0)">3x3x3</a></li>
+                            <li><a href="#">3x3x3</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a id="google-login" style="display: none" href="javascript:void(0)">
+                        <a id="google-login" style="display: none" href="#">
                             Login with Google
                         </a>
                     </li>
                     <li>
-                        <a id="config-button" href="javascript:void(0)">
+                        <a id="config-button" href="#">
                             <span class="glyphicon glyphicon-cog"></span>
                             Configuration
                         </a>
@@ -92,7 +92,7 @@
                 </p>
             </div>
             <div class="col-md-4">
-                <div class="panel panel-default">
+                <div class="panel panel-default panel-times">
                     <div class="panel-heading">
                         <div class="btn-group btn-group-raised pull-right" role="group">
                             <button id="export" type="button" class="btn btn-default btn-xs" title="Export">
@@ -264,7 +264,7 @@
         <input id="import-file" type="file">
     </div>
 
-    <script src="js/cube-timer.min.js"></script>
+    <script src="js/cube-timer.js"></script>
 
     <!--Register Google Api-->
     <script src="js/google-api.js"></script>
